modified the requirements file for lower version of stable-baselines3 and sb3-contrib modules.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,52 @@
-gym==0.23.0
-stable-baselines3==2.0.0
-sb3-contrib==2.0.0
+# 基本環境需求
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+cloudpickle==3.1.0
+contourpy==1.1.1
+cycler==0.12.1
+Farama-Notifications==0.0.4
+filelock==3.16.1
+fonttools==4.54.1
+fsspec==2024.10.0
+google-auth==2.35.0
+gym==0.21.0
+gym-notices==0.0.8
+idna==3.10
+importlib-metadata==4.13.0
+importlib-resources==6.4.5
+jax-jumpy==1.0.0
+jinja2==3.1.4
+kiwisolver==1.4.7
+Markdown==3.7
+MarkupSafe==2.1.5
+matplotlib==3.7.5
+mpmath==1.3.0
+networkx==3.1
+numpy==1.24.4
+oauthlib==3.2.2
+packaging==24.1
+pandas==2.0.3
+pillow==10.4.0
+protobuf==5.28.3
+pyasn1==0.6.1
+pyasn1-modules==0.4.1
 pygame==2.3.0
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+pytz==2024.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+sb3-contrib==1.6.2
+Shimmy==2.0.0
+six==1.16.0
+stable-baselines3==1.6.2
+sympy==1.13.3
+tensorboard-data-server==0.7.2
+torch==2.0.1
+typing-extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+werkzeug==3.0.6
+zipp==3.20.2
